<resources>
    <string name="app_name">Covid-19 Tracker</string>
    <string name="splash_txtView">Covid-19 Tracker</string>
    <string name="creater_name">By Yasharth</string>
    <string name="updated_time">0</string>
    <string name="front_txt">India</string>
    <string name="stay_safe_stay_healthy">Stay Safe,Stay Healthy</string>
    <string name="updated">Updated on:</string>
    <string name="_0">0</string>
    <string name="deceased">Deceased:</string>
    <string name="__0">0</string>
    <string name="active_cases">Active cases:</string>
    <string name="___0">0</string>
    <string name="recovered_cases">Recovered cases:</string>
    <string name="____0">0</string>
    <string name="total_cases">Total Cases:</string>
    <string name="india">India</string>
    <string name="other_regions">Tap here</string>
    <string name="other_regions_of_india">Other Regions Of India</string>
    <string name="recovered">Recovered</string>
    <string name="deceased_tv">Deceased</string>
    <string name="infected">Infected</string>
    <string name="region">Region</string>
    <string name="deceased_2">Deceased</string>
    <string name="condition_of_states_of_india">Condition of States of India:</string>
</resources>
