<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@android:color/black">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ProgressBar
                android:id="@+id/mainProgressBar"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:indeterminate="true"
                android:visibility="invisible"/>
            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="start">

                    <TextView
                        android:id="@+id/textView6"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-light"
                        android:text="@string/updated"
                        android:textColor="@android:color/white"
                        android:textSize="12sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tv_time"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-light"
                        android:gravity="start"
                        android:text="@string/updated_time"
                        android:textColor="@android:color/holo_red_dark"
                        android:textSize="12sp"
                        android:textStyle="bold" />

                </TableRow>
            </TableLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.airbnb.lottie.LottieAnimationView
                    android:id="@+id/lottieAnimationView4"
                    android:layout_width="137dp"
                    android:layout_height="120dp"
                    android:layout_gravity="start"
                    app:lottie_autoPlay="true"
                    app:lottie_fileName="17899-hand-sanitizer.json"
                    app:lottie_loop="true" />

                <com.airbnb.lottie.LottieAnimationView
                    android:id="@+id/lottieAnimationView3"
                    android:layout_width="137dp"
                    android:layout_height="120dp"
                    android:layout_gravity="center"
                    app:lottie_autoPlay="true"
                    app:lottie_fileName="17895-wear-mask.json"
                    app:lottie_loop="true" />

                <com.airbnb.lottie.LottieAnimationView
                    android:id="@+id/lottieAnimationView2"
                    android:layout_width="137dp"
                    android:layout_height="120dp"
                    android:layout_gravity="end"
                    app:lottie_autoPlay="true"
                    app:lottie_fileName="17900-namaste-no-shake-hands.json"
                    app:lottie_loop="true" />

            </LinearLayout>

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center">
                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/tedayslater"
                        android:gravity="center"
                        android:text="@string/india"
                        android:textAllCaps="true"
                        android:textColor="@android:color/white"
                        android:textColorHighlight="@android:color/holo_red_dark"
                        android:textSize="40sp"
                        android:textStyle="bold"/>
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center">

                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/alfa_slab_one"
                        android:gravity="center"
                        android:text="@string/total_cases"
                        android:textColor="@android:color/white"
                        android:textSize="24sp"
                        android:textStyle="bold"/>
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center">

                    <TextView
                        android:id="@+id/tvCases"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/alfa_slab_one"
                        android:gravity="center"
                        android:text="@string/_0"
                        android:textColor="@android:color/holo_red_dark"
                        android:textSize="20sp"
                        android:textStyle="bold"/>

                </TableRow>
                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center">

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/alfa_slab_one"
                        android:gravity="center"
                        android:text="@string/recovered_cases"
                        android:textColor="@android:color/white"
                        android:textSize="24sp"
                        android:textStyle="bold"/>
                </TableRow>
                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center">


                    <TextView
                        android:id="@+id/tvRecovered"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/alfa_slab_one"
                        android:gravity="center"
                        android:text="@string/_0"
                        android:textColor="@android:color/holo_red_dark"
                        android:textSize="20sp"
                        android:textStyle="bold"/>

                </TableRow>
                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center">

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/alfa_slab_one"
                        android:gravity="center"
                        android:text="@string/active_cases"
                        android:textColor="@android:color/white"
                        android:textSize="24sp"
                        android:textStyle="bold"/>

                </TableRow>
                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center">
                    <TextView
                        android:id="@+id/tvActive"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/alfa_slab_one"
                        android:gravity="center"
                        android:text="@string/_0"
                        android:textColor="@android:color/holo_red_dark"
                        android:textSize="20sp"
                        android:textStyle="bold"/>
                </TableRow>
                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center">
                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/alfa_slab_one"
                        android:gravity="center"
                        android:text="@string/deceased"
                        android:textColor="@android:color/white"
                        android:textSize="24sp"
                        android:textStyle="bold"/>
                </TableRow>
                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center">
                    <TextView
                        android:id="@+id/tvTotalDeaths"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/alfa_slab_one"
                        android:gravity="center"
                        android:text="@string/_0"
                        android:textColor="@android:color/holo_red_dark"
                        android:textSize="20sp"
                        android:textStyle="bold"/>
                </TableRow>
            </TableLayout>

            <LinearLayout
                android:layout_marginVertical="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center">
                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/alfa_slab_one"
                    android:gravity="center"
                    android:text="@string/condition_of_states_of_india"
                    android:textColor="@android:color/white"
                    android:textSize="24sp"/>
                <Button
                    android:layout_marginVertical="8dp"
                    android:id="@+id/otherRegionBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg"
                    android:fontFamily="@font/alfa_slab_one"
                    android:padding="7dp"
                    android:text="@string/other_regions"
                    android:textAllCaps="false"
                    android:textColor="@android:color/white"
                    android:textSize="18sp"/>
            </LinearLayout>

        </LinearLayout>

    </ScrollView>
</RelativeLayout>